--- a/engine.cfg
+++ b/engine.cfg
@@ -1,12 +1,27 @@
-; Engine configuration file.
-; It's best to edit using the editor UI, not directly,
-; becausethe parameters that go here are not obvious.
-; 
-; Format: 
-;   [section] ; section goes between []
-;   param=value ; assign values to parameters
-
-
 [application]
+
 name="CrystalMett"
+main_scene="res://main.scn"
 icon="icon.png"
+target_fps=60
+
+[display]
+
+stretch_mode="viewport"
+stretch_aspect="keep_width"
+
+[image_loader]
+
+filter=false
+gen_mipmaps=false
+
+[input]
+
+left_0=[key(A)]
+right_0=[key(D)]
+up_0=[key(W)]
+down_0=[key(S)]
+
+[physics_2d]
+
+default_gravity=0
