--- a/engine.cfg
+++ b/engine.cfg
@@ -19,10 +19,10 @@ gen_mipmaps=false
 
 [input]
 
-left_0=[key(A)]
-right_0=[key(D)]
-up_0=[key(W)]
-down_0=[key(S)]
+left_0=[key(A), key(Left)]
+right_0=[key(D), key(Right)]
+up_0=[key(W), key(Up)]
+down_0=[key(S), key(Down)]
 
 [physics_2d]
 
