--- a/engine.cfg
+++ b/engine.cfg
@@ -23,10 +23,10 @@ gen_mipmaps=false
 
 [input]
 
-left_0=[key(A), key(Left)]
-right_0=[key(D), key(Right)]
-up_0=[key(W), key(Up)]
-down_0=[key(S), key(Down)]
+left_0=[key(A), key(Left), jaxis(0, 0)]
+right_0=[key(D), key(Right), jaxis(0, 0)]
+up_0=[key(W), key(Up), jaxis(0, 1)]
+down_0=[key(S), key(Down), jaxis(0, 1)]
 
 [physics_2d]
 
