Game State Machine

--- a/engine.cfg
+++ b/engine.cfg
@@ -27,6 +27,7 @@ left_0=[key(A), key(Left), jaxis(0, 0)]
 right_0=[key(D), key(Right), jaxis(0, 0)]
 up_0=[key(W), key(Up), jaxis(0, 1)]
 down_0=[key(S), key(Down), jaxis(0, 1)]
+pause_game=[key(Escape)]
 
 [physics_2d]
 
