--- a/engine.cfg
+++ b/engine.cfg
@@ -23,11 +23,15 @@ gen_mipmaps=false
 
 [input]
 
-left_0=[key(A), key(Left), jaxis(0, 0)]
-right_0=[key(D), key(Right), jaxis(0, 0)]
-up_0=[key(W), key(Up), jaxis(0, 1)]
-down_0=[key(S), key(Down), jaxis(0, 1)]
+left_0=[key(Left), jaxis(0, 0)]
+right_0=[key(Right), jaxis(0, 0)]
+up_0=[key(Up), jaxis(0, 1)]
+down_0=[key(Down), jaxis(0, 1)]
 pause_game=[key(Escape)]
+left_1=[key(A)]
+right_1=[key(D)]
+up_1=[key(W)]
+down_1=[key(S)]
 
 [physics_2d]
 
