--- a/engine.cfg
+++ b/engine.cfg
@@ -5,6 +5,10 @@ main_scene="res://main.scn"
 icon="res://gfx/icon.png"
 target_fps=60
 
+[autoload]
+
+leds="*res://scripts/leds.gd"
+
 [debug]
 
 verbose_stdout=false
