clean up resources

--- a/engine.cfg
+++ b/engine.cfg
@@ -1,7 +1,7 @@
 [application]
 
 name="CrystalMett"
-main_scene="res://main.scn"
+main_scene="res://scenes/main.scn"
 icon="res://gfx/icon.png"
 target_fps=60
 
